# authoritative-netcode

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROJECT_SPEC.md
client/: CMakeLists.txt  main.cpp
docs/: architecture.md  decisions.md
server/: CMakeLists.txt  main.cpp
sim/: CMakeLists.txt  fixed_timestep.cpp  fixed_timestep.h  snapshot.h  world.cpp  world.h
tests/: CMakeLists.txt  connection_test.cpp  fixed_timestep_test.cpp  fragment_test.cpp  mixed_channels_test.cpp  rate_governor_test.cpp  reliable_channel_test.cpp  rtt_test.cpp  sim_socket_test.cpp  udp_socket_test.cpp
transport/examples/: CMakeLists.txt  fragmentation_demo.cpp  mixed_channels_demo.cpp  rate_governor_demo.cpp  reliable_demo.cpp  reliable_messages_demo.cpp  rtt_demo.cpp
transport/net/: CMakeLists.txt  endpoint.h  sim_socket.cpp  sim_socket.h  socket.h  udp_socket.cpp  udp_socket.h
transport/reliable/: CMakeLists.txt  channel.cpp  channel.h  connection.cpp  connection.h  fragment.cpp  fragment.h  packet.h  rate_governor.cpp  rate_governor.h  reliable_channel.cpp  reliable_channel.h  rtt.cpp  rtt.h
